// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complete grid 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexWrap": "wrap",
    }
  }
>
  <div
    style={Object {}}
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "1",
        }
      }
      style={Object {}}
    />
  </div>
  <div
    style={Object {}}
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "2",
        }
      }
      style={Object {}}
    />
  </div>
  <div
    style={Object {}}
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "3",
        }
      }
      style={Object {}}
    />
  </div>
  <div
    style={Object {}}
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "4",
        }
      }
      style={Object {}}
    />
  </div>
  <div
    style={Object {}}
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "5",
        }
      }
      style={Object {}}
    />
  </div>
</div>
`;

exports[`complete rows 1`] = `
Array [
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "1",
      }
    }
    style={Object {}}
  />,
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "2",
      }
    }
    style={Object {}}
  />,
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "3",
      }
    }
    style={Object {}}
  />,
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "4",
      }
    }
    style={Object {}}
  />,
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "5",
      }
    }
    style={Object {}}
  />,
]
`;

exports[`grid - products 1`] = `
<div
  className="grid-with-frame"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    style={
      Object {
        "border": "0px solid ",
        "boxSizing": "border-box",
        "flex": "0 0 5cm",
        "height": "5cm",
        "margin": "0px 0px 0px 0px",
        "overflowX": "hidden",
        "overflowY": "hidden",
        "padding": "0px 0px 0px 0px",
        "width": "5cm",
      }
    }
  />
  <div
    style={
      Object {
        "border": "0px solid ",
        "boxSizing": "border-box",
        "flex": "0 0 5cm",
        "height": "5cm",
        "margin": "0px 0px 0px 0px",
        "overflowX": "hidden",
        "overflowY": "hidden",
        "padding": "0px 0px 0px 0px",
        "width": "5cm",
      }
    }
  />
  <div
    style={
      Object {
        "border": "0px solid ",
        "boxSizing": "border-box",
        "flex": "0 0 5cm",
        "height": "5cm",
        "margin": "0px 0px 0px 0px",
        "overflowX": "hidden",
        "overflowY": "hidden",
        "padding": "0px 0px 0px 0px",
        "width": "5cm",
      }
    }
  />
</div>
`;
